--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
+    "analytics": false,
     "packageManager": "pnpm"
   },
   "newProjectRoot": "projects",
@@ -34,7 +35,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/github-markdown-css/github-markdown-light.css"
             ],
             "scripts": []
           },
