--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
+    "@angular/animations": "~13.3.4",
+    "@angular/cdk": "~13.3.4",
+    "@angular/common": "~13.3.4",
+    "@angular/compiler": "~13.3.4",
+    "@angular/core": "~13.3.4",
+    "@angular/forms": "~13.3.4",
+    "@angular/platform-browser": "~13.3.4",
+    "@angular/platform-browser-dynamic": "~13.3.4",
+    "@angular/router": "~13.3.4",
+    "github-markdown-css": "^5.1.0",
+    "hotkeys-js": "^3.9.0",
+    "mousetrap": "^1.6.5",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
+    "@angular-devkit/build-angular": "~13.3.3",
+    "@angular/cli": "~13.3.3",
+    "@angular/compiler-cli": "~13.3.4",
     "@types/jasmine": "~3.10.0",
+    "@types/mousetrap": "^1.6.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
